--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,10 @@
   <div style="text-align: center">
   <main role="main" class="inner cover">
       <nav class="nav nav-masthead justify-content-center">
-        <h1 class="cover-heading">このアプリは社内の方に対し、やる気やモチベーションをアピールするSNSアプリです。</h1>
-        <p class="lead">他部署の人達に自部署のやる気をアピールしたい、</p>
-        <p class="lead">自分の部署の成果や取り組みを展開したい、</p>
-        <p class="lead">このアプリは社内に活気をもたらし、会社を元気にするアプリです。</p>
+        <h1 class="cover-heading">このアプリは会社の掲示板に最適です。</h1>
+        <p class="lead">簡単なメッセージに写真を添えて投稿するだけで、シンプルに利用出来ます。</p>
+        <p class="lead">自部署の仕事の成果や、取り組みをアピールしたい時に最適なアプリです。</p>
+        <p class="lead">メールよりも気軽にコミュニケーションが取れるこのアプリ、早速使っていきましょう!</p>
         　<div style="text-align: center">
   </main>
 
